--- a/package.json
+++ b/package.json
@@ -19,7 +19,14 @@
     "@angular/platform-browser": "~11.2.4",
     "@angular/platform-browser-dynamic": "~11.2.4",
     "@angular/router": "~11.2.4",
+    "@tensorflow-models/knn-classifier": "^1.2.2",
+    "@tensorflow-models/mobilenet": "^2.1.0",
+    "@tensorflow/tfjs": "^3.4.0",
+    "@tensorflow/tfjs-backend-webgl": "^3.4.0",
+    "@tensorflow/tfjs-converter": "^3.4.0",
+    "@tensorflow/tfjs-core": "^3.4.0",
     "rxjs": "~6.6.0",
+    "tfjs": "^0.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
